<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:padding="20dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <Button
        android:id="@+id/btnTemaClaro"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/claro" />

    <Button
        android:id="@+id/btnTemaEscuro"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/escuro" />

    <Button
        android:id="@+id/btnTemaSistema"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sistema" />
</LinearLayout>
