<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AccountActivity">

    <FrameLayout
        android:id="@+id/frameLayout_account"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        app:layout_constraintBottom_toTopOf="@id/ll_account"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <ImageView
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_gravity="center|start"
            android:layout_marginStart="10dp"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="15dp"
            android:src="@drawable/ic_user_3_line"
            app:tint="@color/white" />

        <TextView
            android:id="@+id/tv_user_account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="80dp"
            android:layout_marginTop="15dp"
            android:text="user"
            android:textColor="@android:color/white"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/tv_email_account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="80dp"
            android:layout_marginTop="50dp"
            android:text="email"
            android:textColor="@color/azul_principal"
            android:textSize="15sp" />

    </FrameLayout>

    <LinearLayout
        android:id="@+id/ll_account"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/frameLayout_account">

        <TextView
            android:id="@+id/tv_favorite_movies"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:foreground="?attr/selectableItemBackground"
            android:textAlignment="viewStart"
            android:textColor="@android:color/white"
            android:paddingStart="20dp"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:text="FILMES FAVORITOS: "

            />

        <Button
            android:id="@+id/btn_edit_username"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:foreground="?attr/selectableItemBackground"
            android:text="@string/editar_user"
            android:textAlignment="viewStart"
            android:textColor="@android:color/white"
            app:icon="@drawable/ic_edit_2_fill"

            app:iconTint="@color/white" />

        <Button
            android:id="@+id/btn_edit_email"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:foreground="?attr/selectableItemBackground"
            android:text="@string/editar_email"
            android:textAlignment="viewStart"
            android:textColor="@android:color/white"
            app:icon="@drawable/ic_edit_2_fill"

            app:iconTint="@color/white" />

        <Button
            android:id="@+id/btn_delete_account"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:foreground="?attr/selectableItemBackground"
            android:text="@string/apagar_conta"
            android:textAlignment="viewStart"
            android:textColor="#FD1717"
            app:icon="@drawable/ic_delete_bin_6_fill"

            app:iconTint="#FD1717" />

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>